moved from next to react for tambo ai

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@
   --radius-lg: var(--radius);
   --radius-md: calc(var(--radius) - 2px);
   --radius-sm: calc(var(--radius) - 4px);
+
+  --font-sans: "Inter", sans-serif;
+  --color-teal-500: #0EA5A4;
+  --color-teal-600: #0D9494;
 }
 
 :root {
@@ -55,7 +59,7 @@
 body {
   background-color: hsl(var(--background));
   color: hsl(var(--foreground));
-  font-family: var(--font-inter), sans-serif;
+  font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
